# mandelbrot

./: newtext.txt  text.txt
MandelbrotCpp/: CMakeLists.txt
MandelbrotCpp/src/: main.cpp  main.h
MandelbrotCpp/src/common/: color.h  complexpoint.cpp  complexpoint.h  fractal.cpp  fractal.h
MandelbrotCpp/src/render/: renderer.cpp  renderer.h
MandelbrotWeb/: mandelWorker.js  mandelbrot.html  mandelbrot.js  style.css
MandelbrotWeb/old/: mandelbrotSingle.js
